<resources>
    <string name="app_name">Evento Clic con Botones</string>
    <string name="head">Manejo de evento Click</string>
    <string name="dato1">Ingrese el primer número</string>
    <string name="dato2">Ingrese el segundo número</string>
    <string name="boton1">Sumar</string>
    <string name="boton2">Restar</string>
    <string name="boton3">Multiplicar</string>
    <string name="boton4">Dividir</string>
    <string name="boton5">Acerca de</string>
    <string name="res">Resultado</string>
    <string name="action_settings">settings</string>
</resources>