<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/head"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valor1"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:hint="@string/dato1"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/valor2"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:hint="@string/dato2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor1"
        android:inputType="phone"/>

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:onClick="onClick"
        android:text="@string/boton1"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor2"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="77dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/boton4"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/valor2"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/boton2"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/valor2"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="112dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/boton3"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/btnRestar"
        app:layout_constraintTop_toBottomOf="@+id/valor2"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="410dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:text="@string/boton5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar"
        tools:ignore="TouchTargetSizeCheck"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/res"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcercaDe" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="149dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head"
        app:srcCompat="@drawable/calc" />
</androidx.constraintlayout.widget.ConstraintLayout>